# lift-generics

./: .travis.yml  CHANGELOG.md  README.md  lift-generics.cabal
.github/workflows/: haskell-ci.yml
src/Language/Haskell/TH/Lift/: Generics.hs
src/Language/Haskell/TH/Lift/Generics/Internal/: OuterTypeable.hs
tests/: LiftGenericsSpec.hs  Types.hs
