name:                lift-generics
version:             0.1
synopsis:            GHC.Generics-based Language.Haskell.TH.Syntax.lift implementation
description:         TODO: Fill me in later
homepage:            https://github.com/RyanGlScott/lift-generics
bug-reports:         https://github.com/RyanGlScott/lift-generics/issues
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
stability:           Experimental
copyright:           (C) 2015 Ryan Scott
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/RyanGlScott/lift-generics

library
  exposed-modules:     Language.Haskell.TH.Lift.Generics
  build-depends:       base             >= 4.3 && < 5
                     , generic-deriving >= 1.8 && < 2
                     , template-haskell >= 2.4 && < 2.12
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       LiftGenericsSpec
                       Types
                       Paths_lift_generics
  build-depends:       base             >= 4.3   && < 5
                     , base-compat      >= 0.8.2 && < 1
                     , generic-deriving >= 1.8   && < 2
                     , hspec            >= 2     && < 3
                     , lift-generics    == 0.1
                     , QuickCheck       >= 2.5   && < 3
                     , template-haskell >= 2.4   && < 2.12
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts
